# 30122-project-mapademic

./: LICENSE  README.md  grouped_cited_by.csv  hello.py  mapademic.py  mapadmic.py  pyproject.toml  steamlit.py
data/: keyword_search_2023_cleaned_with_abstract.json  output_geo_data.csv
data/output_data/: machinelearningandpolicy_2020_state_data.csv  machinelearningandpolicy_2020_state_data1.csv  machinelearningandpolicy_2021_state_data.csv  machinelearningandpolicy_2022_state_data.csv  machinelearningandpolicy_2023_state_data.csv  machinelearningandpolicy_2023_word_frequency.csv  machinelearningandpolicy_2024_state_data.csv  machinelearningandpolicy_2024_word_frequency.csv  word_frequency.csv
data/raw_data/: afid_state_dataset.json  aiforpolicy_2022_paper.json  aiforpolicy_2023_paper.json  aiforpolicy_2024_paper.json  aipolicy_2020_paper.json  aipolicy_2021_paper.json  biologicalengineering_2020_paper.json  biologicalengineering_2021_paper.json  biologicalengineering_2022_paper.json  biologicalengineering_2023_paper.json  biologicalengineering_2024_paper.json  code_country.csv  datasecurity_2020_paper.json  datasecurity_2021_paper.json  datasecurity_2022_paper.json  datasecurity_2023_paper.json  datasecurity_2024_paper.json  financialcrisis_2020_paper.json  financialcrisis_2021_paper.json  financialcrisis_2022_paper.json  financialcrisis_2023_paper.json  financialcrisis_2024_paper.json  (+32 more)
doc/: pro_requirement.md
milestones/: milestone1.md  milestone2.md
tests/: sample.json  sample_test.json  test_api_data.py  test_data_clean.py  test_visualization.py
(+248 files in other folders)
