[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "plotly-express>=0.4.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "streamlit>=1.42.2",
    "wordcloud>=1.9.4",
]
