[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cache>=1.0.3",
    "imageio>=2.37.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "plotly-express>=0.4.1",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.2",
    "unidecode>=1.3.8",
    "wordcloud>=1.9.4",
]
